--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/53ee901694.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,8 +18,9 @@
         <div class="container navbar-container">
             <div class="row w-100">
                 <div class="col-4 col-md-2">
-                    <button type="button" id="highscores" class="btn btn-lg btn-outline-primary">Highest Scores</button>
-                </div>
+                    <button type="button" id="highscores" class="btn btn-lg btn-outline-primary">Highest Scores<i class="fas fa-crown"></i
+                        ></button>
+                    </div>
                 <div class="col-3 col-md-7"></div>
                 <div class="col-5 col-md-3">
 
@@ -47,6 +49,11 @@
             </div>
         </div>
     </main>
+    <div class="container">
+        <footer id="sticky-footer">
+          <small>Copyright &copy; Michael's Website</small>
+        </footer>
+      </div>
 
     <!-- script.js tag -->
     <script src="script.js"></script>
