--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
             </div>
         </div>
     </main>
+    <!--  -->
     <div class="container">
         <footer id="sticky-footer">
           <small>Copyright &copy; Michael's Website</small>
         </footer>
       </div>
 
-    <!-- script.js tag -->
+     script.js tag -->
     <script src="script.js"></script>
 </body>
 
