--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       src="https://kit.fontawesome.com/53ee901694.js"
       crossorigin="anonymous"
     ></script>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -21,16 +24,5 @@
         ></a>
       </div>
     </div>
-  </body>
-</html>
-    <!--  -->
-    <div class="container">
-      <footer id="sticky-footer">
-        <small>Copyright &copy; Michael's Website</small>
-      </footer>
-    </div>
-
-    <!--script.js tag -->
-    <script src="script.js"></script>
   </body>
 </html>
