--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code quiz</title>
-    <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/53ee901694.js"
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-    ></script>
+    />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
       rel="stylesheet"
@@ -18,11 +20,15 @@
     <div class="container">
       <div id="home" class="flex-column flex-center">
         <h1>Code quiz</h1>
-        <a href="/game.html" class="btn">Play</a>
-        <a href="/highscores.html" id="highscore-btn" class="btn"
+        <a href="game.html" class="btn">Play</a>
+        <a href="highscores.html" id="highscore-btn" class="btn"
           >Highest Scores<i class="fas fa-crown"></i
         ></a>
       </div>
     </div>
+    <script
+      src="https://kit.fontawesome.com/53ee901694.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
