--- a/end.html
+++ b/end.html
@@ -35,7 +35,7 @@
           </button>
         </form>
         <a href="game.html" class="btn">Play Again</a>
-        <a href="/index.html" class="btn">Go Home<i class="fas fa-home"></i></a>
+        <a href="index.html" class="btn">Go Home<i class="fas fa-home"></i></a>
       </div>
     </div>
     <script src="end.js"></script>
