--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
       rel="stylesheet"
@@ -20,8 +20,8 @@
     <div class="container">
       <div id="home" class="flex-column flex-center">
         <h1>Code quiz</h1>
-        <a href="game.html" class="btn">Play</a>
-        <a href="highscores.html" id="highscore-btn" class="btn"
+        <a href="/game.html" class="btn">Play</a>
+        <a href="/highscores.html" id="highscore-btn" class="btn"
           >Highest Scores<i class="fas fa-crown"></i
         ></a>
       </div>
