--- a/end.html
+++ b/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
@@ -34,10 +34,10 @@
             Save
           </button>
         </form>
-        <a href="game.html" class="btn">Play Again</a>
-        <a href="index.html" class="btn">Go Home<i class="fas fa-home"></i></a>
+        <a href="/game.html" class="btn">Play Again</a>
+        <a href="/index.html" class="btn">Go Home<i class="fas fa-home"></i></a>
       </div>
     </div>
-    <script src="end.js"></script>
+    <script src="/end.js"></script>
   </body>
 </html>
