--- a/game.html
+++ b/game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Code</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/game.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="game.css" />
   </head>
   <body>
     <div class="container">
@@ -41,6 +41,6 @@
         </div>
       </div>
     </div>
-    <script src="/game.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
