--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="container">
       <div id="home" class="flex-column flex-center">
         <h1>Code quiz</h1>
-        <a href="/game.html" class="btn">Play</a>
-        <a href="/highscores.html" id="highscore-btn" class="btn"
+        <a href="game.html" class="btn">Play</a>
+        <a href="highscores.html" id="highscore-btn" class="btn"
           >Highest Scores<i class="fas fa-crown"></i
         ></a>
       </div>
