--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
   </head>
   <body>
+    <!--PlayGame Highestscore btn-->
     <div class="container">
       <div id="home" class="flex-column flex-center">
         <h1>Code quiz</h1>
