Code quiz folder refactor

--- a/highscores.html
+++ b/highscores.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Highest Scores</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="highscores.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/highscores.css" />
   </head>
 
   <body>
@@ -16,6 +16,6 @@
         <a href="index.html" class="btn">Go Home<i class="fas fa-home"></i></a>
       </div>
     </div>
-    <script src="highscores.js"></script>
+    <script src="./js/highscores.js"></script>
   </body>
 </html>
