--- a/end.html
+++ b/end.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <!-- <link
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
       integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
       crossorigin="anonymous"
-    /> -->
+    />
   </head>
   <body>
     <div class="container">
@@ -38,6 +38,6 @@
         <a href="index.html" class="btn">Go Home<i class="fas fa-home"></i></a>
       </div>
     </div>
-    <script src="end.js"></script>
+    <script src="./js/end.js"></script>
   </body>
 </html>
