--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <!--PlayGame Highestscore btn-->
     <div class="container">
       <div id="home" class="flex-column flex-center">
         <h1>Code quiz</h1>
